<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_file_properties"
        android:title="@string/properties"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_as"
        android:title="@string/open_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_regenerate_thumbnail"
        android:title="@string/regenerate_thumbnail"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recursive_image_thumbnails"
        android:title="@string/thumbnail_recursive_image_action"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recursive_video_thumbnails"
        android:title="@string/thumbnail_recursive_video_action"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:title="@string/download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move"
        android:title="@string/move"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_link"
        android:title="@string/link"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_serve"
        android:title="@string/serve"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:title="@string/sync"
        app:showAsAction="never" />

</menu>