<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FileListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/file_grid_item_margin"
    android:background="?selectableItemBackground"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/file_grid_item_padding"
    android:theme="@style/FileListItem">

    <FrameLayout
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        android:clipToPadding="true">

        <ImageView
            android:id="@+id/file_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:contentDescription="@string/file_icon"
            android:minHeight="0dp"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_file" />

        <ImageView
            android:id="@+id/dir_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/file_icon"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_folder" />

        <ImageButton
            android:id="@+id/file_options"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@null"
            android:contentDescription="@string/file_options_content_description"
            android:elevation="0dp"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_more_vert"
            android:tint="?attr/colorOnSurfaceVariant" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/file_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <TextView
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:gravity="top|center_horizontal"
            android:maxLines="3"
            android:minLines="1"
            android:textSize="14sp"
            tools:text="A video with a long file name that can occupy up to three lines.mp4" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/file_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/file_modtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/interpunct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interpunct" />

        <TextView
            android:id="@+id/file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
